apps/audiobookshelf/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
  labels:
    app.kubernetes.io/name: audiobookshelf
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: audiobookshelf
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: audiobookshelf
    spec:
      containers:
        - name: audiobookshelf
          image: ghcr.io/advplyr/audiobookshelf:2.35.0
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: docker-data
              mountPath: /config
              subPath: config
            - name: docker-data
              mountPath: /metadata
              subPath: metadata
            - name: storage-media
              mountPath: /audiobooks
              subPath: bookshelf/audio_books
            - name: storage-media
              mountPath: /podcasts
              subPath: bookshelf/podcasts
            - name: storage-media
              mountPath: /ebooks
              subPath: kavita/books
            - name: tmp
              mountPath: /tmp
          resources:
            requests:
              cpu: 50m
              memory: 384Mi
      volumes:
        - name: docker-data
          persistentVolumeClaim:
            claimName: pvc-audiobookshelf-docker-data
        - name: storage-media
          persistentVolumeClaim:
            claimName: pvc-audiobookshelf-storage-media
        - name: tmp
          emptyDir: {}
