apps/audiobookshelf/base/ingressRoute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: audiobookshelf

spec:
  entryPoints:
    - web
  routes:
    - match: Host(`audiobookshelf.internal`)
      kind: Rule
      services:
        - name: audiobookshelf
          port: 80
